@@ -1,3 +1,8 @@
+2017-03-06  Vladimir Makarov  <vmakarov@redhat.com>
+
+	PR rtl-optimization/79571
+	* gcc.target/i386/pr79571.c: New.
+
 2017-03-06  Marek Polacek  <polacek@redhat.com>
 
 	PR c++/79796 - ICE with NSDMI and this pointer
